BACS-18: feat: location admins implemented
